# koda-agent

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  FEATURE_ANALYSIS.md  FUTURE.md  README.md  RELEASE_NOTES.md  issue_24_comment.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
agents/: code_reviewer.json  default.json  releaser.json  reviewer.json  security.json  testgen.json
koda-agent/: Cargo.toml  README.md
koda-agent/src/: main.rs
koda-cli/: Cargo.toml
koda-cli/src/: app.rs  commands.rs  confirm.rs  display.rs  headless.rs  highlight.rs  input.rs  interrupt.rs  main.rs  markdown.rs  onboarding.rs  repl.rs  sink.rs
koda-cli/tests/: cli_test.rs  regression_test.rs
koda-core/: Cargo.toml
koda-core/agents/: default.json  releaser.json  testgen.json
koda-core/src/: agent.rs  approval.rs  capabilities.md  config.rs  context.rs  inference.rs  lib.rs  loop_guard.rs  preview.rs  runtime_env.rs  session.rs  version.rs
koda-core/src/engine/: event.rs  mod.rs  sink.rs
koda-core/src/mcp/: client.rs  mod.rs  registry.rs
koda-core/src/providers/: anthropic.rs  mod.rs  openai_compat.rs  think_tag_filter.rs
koda-core/src/tools/: agent.rs  ast.rs  file_tools.rs  glob_tool.rs  grep.rs  memory.rs  mod.rs  reasoning.rs  shell.rs  web_fetch.rs
koda-core/tests/: capabilities_test.rs  file_tools_test.rs  perf_test.rs
src/: app.rs  approval.rs  capabilities.md  clipboard.rs  config.rs  confirm.rs  db.rs  display.rs  inference.rs  input.rs  keystore.rs  loop_guard.rs  main.rs  markdown.rs  memory.rs  onboarding.rs  repl.rs  runtime_env.rs  version.rs
src/engine/: event.rs  mod.rs  sink.rs
src/mcp/: config.rs  registry.rs
src/providers/: anthropic.rs  gemini.rs  mod.rs  openai_compat.rs
src/tools/: agent.rs  ast.rs  constructor.rs  file_tools.rs  grep.rs  mod.rs  shell.rs  todo.rs
src/tui/: engine.rs  event.rs  mod.rs  renderer.rs  select.rs  state.rs
tests/: cli_test.rs  file_tools_test.rs  new_tools_test.rs  perf_test.rs  regression_test.rs
